--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.954"
-      app:srcCompat="@drawable/baseline_add_circle_outline_24" />
+      app:srcCompat="@drawable/baseline_add_circle_outline_24"
+      />
 
   <ImageView
       android:id="@+id/imageView"
