--- a/app/src/main/res/layout/list_usuarios.xml
+++ b/app/src/main/res/layout/list_usuarios.xml
@@ -13,7 +13,7 @@
         android:textSize="25sp"
         android:textStyle="bold"
         android:textColor="#070707"
-        android:background="#00BCD4"/>
+        android:background="#7eb8da"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -27,8 +27,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="11dp"
             android:text="Acciones"
-
-            android:textColor="#062BFB"
+            android:textColor="#7eb8da"
             android:textSize="15dp"
             android:textStyle="bold" />
 
